--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
                 <div class="px-16">
                     <h1 class="text-4xl font-bold mb-5">Great Tea, Freshly <br> Presented</h1>
                     <p class="text-4 mb-8 ">
-                        The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.
+                        The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions .
+                        It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been
+                        deeply appreciated by its custoers because of good words of mouth and unique customized service
+                        orginated from Taiwan.
                     </p>
                     <h3 class="text-4xl font-bold mb-9 "> Unique Test </h3>
                     <p class="text-4 mb-8 ">
@@ -101,20 +104,92 @@
         </section>
         <section class="container mx-auto mt-32">
             <div class=" bg-gradient-to-r from-[#FF8938] to-[#FF0000] h-auto rounded-xl">
-                <div class="grid grid-cols-2">
+                <div class="grid sm:grid-cols-1 md:grid-cols-2 gap-8">
                     <div class="mx-20 my-40 flex justify-center items-center">
                         <div>
                             <h1 class="text-5xl text-white font-semibold  mb-5">
                                 Meet Our Super <br> Clients </h1>
-                           
-                            <p class="leading-7 text-white mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+
+                            <p class="leading-7 text-white mb-8">There are many variations of passages of Lorem Ipsum
+                                available, but the majority have suffered alteration in some form, by injected humour,
+                                or randomised words which don't look even slightly believable. </p>
                             <button class="bg-white text-[#FF8938] py-4 px-8 rounded-lg font-bold">Show All</button>
                         </div>
                     </div>
-                    <div></div>
+                    <div class="py-20">
+                        <div class="">
+                            <div class="w-96 bg-white rounded-lg mb-8 mx-auto z-0  opacity-30">
+                                <img src="images/client.png" alt="">
+                                <div class="px-12">
+                                    <p class="mb-6">We are providing the best and suitable home insurance services
+                                        for
+                                        the people who are interested to treatment</p>
+                                    <h4 class="text-8 font-semibold">Ilham Yuda</h4>
+                                    <p class="text-gray-400 pb-8">Businessman</p>
+                                </div>
+                            </div>
+                            <div class="w-96 bg-white rounded-lg mx-auto z-0  opacity-30">
+                                <img src="images/client.png" alt="">
+                                <div class="px-12">
+                                    <p class="mb-6">We are providing the best and suitable home insurance services
+                                        for the people who are interested to treatment</p>
+                                    <h4 class="text-8 font-semibold">Ilham Yuda</h4>
+                                    <p class="text-gray-400 pb-8">Businessman</p>
+                                </div>
+
+                            </div>
+
+                        </div>
+                        <div class="custom-css-card z-10">
+                            <div class="w-96 bg-white rounded-lg mx-auto opacity-100">
+                                <img src="images/client.png" alt="">
+                                <div class="px-12">
+                                    <p class="mb-6">We are providing the best and suitable home insurance services
+                                        for the people who are interested to treatment</p>
+                                    <h4 class="text-8 font-semibold">Ilham Yuda</h4>
+                                    <p class="text-gray-400 pb-8">Businessman</p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-
+        </section>
+        <section class="container mx-auto mt-32">
+            <div class="w-3/5 text-center mx-auto">
+                <h1 class="text-5xl font-bold mb-5">News & Event</h1>
+                <p class=" text-gray-500 mb-12">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            </div>
+            <div class="grid sm:grid-cols-1 md:grid-cols-3 gap-6 px-8">
+                <div class="w-96 p-8 border border-gray-500 rounded-lg">
+                    <img class="mx-auto" src="images/news-1.png" alt="">
+                    <div class="mt-5">
+                        <p class=" text-gray-500 mb-3">jan 22 2023 </p>
+                        <h2 class="text-2xl font-semibold mb-5">Collecting 8 points for <br>Discount</h2>
+                        <p class="text-gray-500 mb-3">There are many variations passages of lorem ipsum available</p>
+                        <h4 class="text-1xl font-semibold">Learn More</h4>
+                    </div>
+                </div>
+                <div class="w-96 p-8 border border-gray-500 rounded-lg">
+                    <img class="mx-auto" src="images/news-2.png" alt="">
+                    <div class="mt-5">
+                        <p class=" text-gray-500 mb-3">jan 22 2023 </p>
+                        <h2 class="text-2xl font-semibold mb-5">Collecting 8 points for <br>Discount</h2>
+                        <p class="text-gray-500 mb-3">There are many variations passages of lorem ipsum available</p>
+                        <h4 class="text-1xl font-semibold">Learn More</h4>
+                    </div>
+                </div>
+                <div class="w-96 p-8 border border-gray-500 rounded-lg">
+                    <img class="mx-auto" src="images/news-3.png" alt="">
+                    <div class="mt-5">
+                        <p class=" text-gray-500 mb-3">jan 22 2023 </p>
+                        <h2 class="text-2xl font-semibold mb-5">Collecting 8 points for <br>Discount</h2>
+                        <p class="text-gray-500 mb-3">There are many variations passages of lorem ipsum available</p>
+                        <h4 class="text-1xl font-semibold">Learn More</h4>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
