--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="mb-8 leading-8 text-gray-600">Tea and Botanical Solutions Supplier Give Optimum <br>
                     Satisfaction To Your Taste Buds.</p>
                 <button class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] py-3 px-5 rounded text-white">Explore More
-                    <i class="fa-solid fa-arrow-right"></i></button>
+                    <i class="fa-solid fa-square-arrow-up-right"></i></button>
             </div>
             <div>
                 <img class="mt-8" src="images/banner.png" alt="">
@@ -192,8 +192,52 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="bg-red-100 mt-32">
+        <div class="py-32  container mx-auto ">
+            <div class=" flex justify-between items-center">
+                <div> 
+                    <img src="images/cup.png" alt="">
+                </div>
+                <div class="flex items-center"> 
+                    <p>Ready to get strated?</p>
+                    <button class="ml-10 bg-gradient-to-r from-[#FF8938] to-[#FF0000] py-3 px-5 rounded text-white">Get Started</button>
+                </div>
+            </div>
+            <div class=" grid sm:grid-cols-1 md:grid-cols-4 mt-20">
+                <div class=" text-left space-y-4">
+                    <h3 class="text-2xl font-semibold">Quick Links</h3>
+                    <p>Home</p>
+                    <p>About Us</p>
+                    <p>Insurance</p>
+                    <p>Privacy Policy</p>
+                </div>
+                <div class=" text-left space-y-4">
+                    <h3 class="text-2xl font-semibold">Our Services</h3>
+                    <p>Life Insurance</p>
+                    <p>Car Insurance</p>
+                    <p>Health Insurance</p>
+                    <p>Home Insurance</p>
+                </div>
+                <div class=" text-left space-y-4">
+                    <h3 class="text-2xl font-semibold">Help</h3>
+                    <p>FAQs</p>
+                    <p>Contact Us</p>
+                </div>
+                <div class="text-left space-y-4">
+                    <h3 class="text-2xl font-semibold">Subscribe to our <br> newsletter</h3>
+                    <div>
+                        <input class="border-0 border-b border-black py-3 px-8 bg-transparent" type="text" placeholder="Email-Address">
+                        <button class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] text-white rounded-full px-3 py-2"><i class="fa-solid fa-angle-right"></i></button>
+                    </div>
+                    <div class=" space-x-4">
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                    </div>
+                </div>
+            </div>
+            <p class="text-center mt-20">© 2027 UIDesign.to - All rights reserved.</p>
+        </div>
     </footer>
 </body>
 
